tests/error/type_match/typename_non_type_dest.bz
// error: couldn't match the function call to the function
// note: function argument types are 'typename'
// note: candidate: 'function test1(val: int32) -> void'
function test1(val: int32);

function test()
{
	test1(float32);
}
